# fastapi-repository-pattern

./: README.md  alembic.ini  docker-compose.yaml  pyproject.toml  settings.toml
src/: config.py  main.py  utils.py
src/application/dependencies/: auth_dependencies.py  category_dependencies.py  dependencies.py  product_dependencies.py
src/application/routers/: __init__.py  auth.py  category.py
src/core/dto/: __init__.py  auth.py  category.py  mixins.py  product.py
src/core/services/: auth_service.py  base.py  category_service.py  product_service.py
src/infrastructure/database/: __init__.py  db.py
src/migrations/: env.py
src/migrations/versions/: 3d952cc238f4_.py
src/repository/: __init__.py
src/repository/implementations/: auth_repository.py  category_repository.py  product_repository.py
src/repository/interfaces/: base.py  sqlalchemy_repository.py
src/repository/models/: category.py  mixins.py  product.py  user.py
